# Cursos-EBAC

VisualizarComunicarDados/visualizacaoDados/: uso_matplotlib.py
analiseDados/exemploNba/: main.py
back-end/: pyproject.toml
back-end/algoritmos/: aprovado_reprovado.py  inverte_string.py  lista_tarefas.py  n_valor_freq_igual.py  numero_faltante_array.py  ordem_alfabetica.py  palindromo.py  par_impar.py  soma_min_max.py  somatorio.py  tabuada.py  testreplace.py
back-end/api/: api_livros.py  app.py  pyproject.toml
back-end/api-livros/: main.py  pyproject.toml
back-end/api/api_hashtag/: main.py
back-end/api/api_hashtag/alembic/: env.py
back-end/api/api_hashtag/alembic/versions/: 9d8f80a66b5e_initial_migration.py
back-end/api/api_hashtag/models/: models.py
back-end/api/api_hashtag/routes/: auth_routes.py  order_routes.py
back-end/api/api_hashtag/routes/dependencies/: dependencies.py
back-end/api/api_hashtag/schemas/: schemas.py
back-end/calculadora/: calculadora.py
back-end/recursosAcessorios/: lambda.py  listComprehension.py
front-end/calculadoraDeDesconto/: index.html
front-end/introCSS/: index.html  style.css
front-end/introHTML/: index.html  primeiro-site.html
manipulacaoProcessamentoDados/manipulacao_dados/: inconsistencias.py  intro_tratamento_dados.py  limpeza_dados.py  outliers.py
manipulacaoProcessamentoDados/pratica/: transform_log.py  transform_log_2.py
manipulacaoProcessamentoDados/preparacao_dados/: normalizacao_padronizacao.py
praticando/: rockPaperScissors.py
tratamentoDados/pratica/: boxcox.py
(+33 files in other folders)
